fixes badges spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,7 +36,7 @@ td {
 }
 
 nav.navbar.navbar-inverse {
-  /*background-color: #272d35;*/
+  /*background-color: #407C8D;*/
   border: none;
   padding-left: 0;
 }
@@ -110,6 +110,10 @@ h2.brand {
   margin-top: 0;
 }
 
+table#products-table p {
+
+}
+
 .inner-header > h3{
   color: black;
 }
@@ -150,31 +154,25 @@ h2.brand {
 }
 
 #badges-inner > div {
-  /*height: 300px;*/
-  border-right: 1px solid black;
   padding-top: -20px;
   padding-bottom: -20px;
   margin-bottom: 15px;
   text-align: center;
 }
 
-#badges-inner > div:nth-child(3) {
-  border: none;
-}
-
-#badges-inner > div:last-child {
-  border: none;
-}
 
 #badges-inner img {
   height: 100px;
-  margin-bottom: -15px;
+  margin-bottom: -11px;
 }
 
-#badges-inner i {
+.badges-content i {
   font-size: 90px;
 }
 
+h3.badges-header {
+  margin-top: 10px
+}
 
 .call button.btn.btn-primary {
   position: relative;
@@ -191,7 +189,13 @@ h2.brand {
 }
 
 .col-inner#about-left {
+  text-align: justify;
   margin-right: 50px;
+}
+
+.col-inner#about-left p {
+  line-height: 1.75;
+  font-size: 15px;
 }
 
 .col-inner#contact {
